[project]
name = "traffic-congestion-detection"
version = "0.1.0"
description = "Traffic congestion classification with sensor noise robustness testing"
authors = [
    {name = "ToYoNiX",email = "iik20001998@gmail.com"}
]
requires-python = "^3.11"
dependencies = [
    "numpy (>=2.4.4,<3.0.0)",
    "pandas (>=3.0.2,<4.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "joblib (>=1.5.3,<2.0.0)",
    "matplotlib (>=3.10.9,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "tensorflow (>=2.15.0,<3.0.0)",
    "ipykernel (>=6.0.0)"
]


[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
